Test/good/bitrep/bit.tt
import Data.Nat

object Bit : Type where
  O : Bit
  I : Bit
